# sddec25-01

./: .chktexrc  .conclaude.yaml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GRAMMAR_ANALYSIS_REPORT.md  LATEX_MODERNIZATION.md  MIGRATION_GUIDE.md  README.md  REFERENCE_USAGE_REPORT.md  TENSE_USAGE_REPORT.md  build.sh  flake.nix  isusdd.cls  main.aux  main.bcf  main.blg  main.out  main.py  main.tex  main.toc  pdflatex_output.txt  pyproject.toml  references.bib  template.docx
.claude/: settings.json
.claude/agents/: coder.md
.claude/commands/spectr/: apply.md  proposal.md  sync.md
.github/: SMB_DEPLOYMENT.md  deploy-smb.yml.template
.github/instructions/: latex-linting.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  perc.yml  pr.yml  release.yml
1-textos/: 1-introdução.tex  2-referencial teorico.tex  3-metodologia.tex  4-desenvolvimento.tex  5-conclusão.tex  resumo.tex
3-Tabelas/: tabteste.tex
apps/demo/: .gitignore  README.md  dd.py  demo_dd.py  pyproject.toml  requirements.txt
apps/demo_tiny_effvit/: main.py  pyproject.toml
apps/effvit/: demo.py  demo_dd.py  demo_pp.py  mlflow.db  model_architecture  precompute.py  render.py  run.sh  train.py
apps/nsa/: README.md  demo.py  demo_dd.py  modal_train.py  pyproject.toml  render.py  train.py  view_dataset.py
apps/nsa/nsa/: __init__.py
apps/precompute/: main.py  pyproject.toml
apps/precompute/precompute/: main.py
apps/precompute_inf/: main.py  pyproject.toml
apps/train_ellipse/: README.md  pyproject.toml
apps/train_ellipse/train_ellipse/: __init__.py  main.py
apps/train_ellipse_inf/: README.md  pyproject.toml
apps/train_ellipse_inf/train_ellipse_inf/: __init__.py  main.py
apps/train_tiny_effvit/: main.py  pyproject.toml
apps/train_tiny_effvit/train_tiny_effvit/: main.py
demo/: README.md  demo.py  demo_efficientvit.py  demo_shallownet.py  pyproject.toml
documents/: DesignDocSemester1.md  EngineeringStandards.md  Report1Semester1.md  Report1Semester2.md  Report2Semester1.md  Report2Semester2.md  Report3Semester1.md  Report3Semester2.md  Report4Semester1.md  Report4Semester2.md  Report5Semester1.md  Report5Semester2.md  Report6Semester1.md  Report7Semester1.md  Report8Semester1.md  TestingStrategy.md  UserTestingPlan.md
dsa/: __init__.py  demo.py  lightning_indexer.py  model.py  pyproject.toml  sparse_attention.py  test.py  train.py
nsa/: demo.py  demo_dd.py  pyproject.toml  render.py  test.py  train.py
nsa/nsa/: model.py
openspec/: project.md
pacotes/: relatorio.cls
poster/: .latexmkrc  IMPROVEMENTS_SUMMARY.md  README.md  VISUAL_ASSETS_NEEDED.md  poster-config.tex  poster.tex
poster/sections/: acknowledgments.tex  architecture.tex  conclusion.tex  introduction.tex  methodology.tex  results.tex  title.tex
sections/: 01-introduction.tex  02-requirements.tex  03-project-plan.tex  04-design.tex  05-testing.tex  06-implementation.tex  07-conclusion.tex  abstract.tex
sparse/: __init__.py  demo.py  demo_dd.py  demo_pp.py  main.py  model.py  precompute.py  pyproject.toml  render.py  test.py  train.py
spectr/: project.md
spectr/changes/add-efficientvit-colab-notebook/: proposal.md  tasks.md
spectr/changes/add-efficientvit-tiny-training/: tasks.md
spectr/changes/add-ellipse-colab-notebook/: proposal.md  tasks.md
spectr/changes/add-ellipse-training-apps/: proposal.md  tasks.md
spectr/changes/add-github-profile-links/: proposal.md  tasks.json
spectr/changes/add-live-webcam-demo/: DECISIONS.md  tasks.md
spectr/changes/add-openeds-dataset-analysis/: tasks.md
spectr/changes/add-poster-project/: proposal.md  tasks.md
spectr/changes/add-precompute-script/: design.md  proposal.md  tasks.md
spectr/changes/add-precomputed-dataset-link/: tasks.md
spectr/changes/add-pytorch-efficientvit-demo/: design.md  tasks.md
spectr/changes/archive/2025-11-23-add-poster-project/: design.md  tasks.md
spectr/changes/archive/2025-12-05-add-efficientvit-training/: design.md  (+2 more)
spectr/changes/convert-shallownet-demo-to-pytorch/: proposal.md  tasks.md
spectr/changes/update-ellipse-export-to-pytorch/: proposal.md  tasks.md
spectr/specs/build-system/: spec.md
spectr/specs/design-document/: spec.md
spectr/specs/effvit-model/: spec.md
spectr/specs/ellipse-model/: spec.md
spectr/specs/poster-generation/: spec.md
spectr/specs/precompute/: spec.md
spectr/specs/training/: spec.md
spectr/specs/webcam-demo/: spec.md
spectr/specs/website-navigation/: spec.md
src/: .gitignore  TRAINING.md  demo.py  model.py  precompute.py  pyproject.toml  test.py  train.py
training/: .gitignore  README.md  precompute.py  precompute_inf.py  pyproject.toml  train.py  train_big_local.py  train_efficientvit.ipynb  train_efficientvit.py  train_efficientvit_local.py  train_efficientvit_tiny_local.py  train_ellipse.ipynb  train_ellipse.py  train_ellipse_local.py  train_local.py  train_tiny_local_inf.py
training/checkpoints/: best_efficientvit_model.pt
training/models/: __init__.py  efficientvit.py
training/spectr/changes/add-efficientvit-tiny-training/: proposal.md  tasks.md
training/train_metrics/: alpha.csv  best_epoch.csv  best_valid_iou.csv  final_train_iou.csv  final_train_loss.csv  final_valid_iou.csv  final_valid_loss.csv  learning_rate.csv  train_background_iou.csv  train_ce_loss.csv  train_dice_loss.csv  train_iou.csv  train_loss.csv  train_pupil_iou.csv  train_surface_loss.csv  valid_background_iou.csv  valid_ce_loss.csv  valid_dice_loss.csv  valid_iou.csv  valid_loss.csv  valid_pupil_iou.csv  valid_surface_loss.csv
try/: demo.py  model.py
www/: index.html
www/css/: site.css
www/documents/: DesignDocSemester1.md
(+51 files in other folders)
