[project]
name = "train-shallow"
version = "0.1.0"
description = "ShallowNet training script"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal>=0.64.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "torchvision>=0.15.0",
    "opencv-python-headless>=4.5.0",
    "Pillow>=8.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "mlflow[databricks]>=3.5.0",
    "requests>=2.28.1",
    "matplotlib>=3.5.0",
    "kaggle>=1.6.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "pyyaml>=6.0.0",
    "datasets>=4.4.1",
    "pyarrow>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
