[project]
name = "visionassist-demo"
version = "0.1.0"
description = "VisionAssist Live Demo - ShallowNet Semantic Segmentation for eye tracking"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.5.0",
    "onnxruntime>=1.17.0",
    "mediapipe>=0.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.17.0",
]

[project.scripts]
demo = "demo:main"

[tool.uv]
dev-dependencies = []
