[project]
name = "nsa"
version = "0.1.0"
description = "Native Sparse Attention for Pupil Segmentation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "huggingface_hub>=0.21.0",
    "datasets>=4.4.1",
    "pyarrow>=14.0.0",
    "mlflow>=3.7.0",
    "mediapipe>=0.10.21",
    "kornia>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nsa"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
